# 3dcertify

./: .gitignore  .gitmodules  LICENSE  README.md  auto_LiRPA.diff  environment.yml  eval_perturbation.py  eval_rotation.py  lirpa_integration.py  train_classification.py  train_lirpa.py  train_segmentation.py  verify_deepg.py  verify_deepg_segmentation.py  verify_lirpa.py  verify_perturbation.py  verify_segmentation.py  verify_transformation.py
data/: .gitignore
deepg3d/: .gitignore  (+1 more)
deepg3d/code/: CMakeLists.txt  Makefile  deepg_pointclouds.cpp
deepg3d/code/abstraction/: abstraction.cpp  abstraction.h
deepg3d/code/cmake-modules/: FindGUROBI.cmake
deepg3d/code/datasets/: shapenet_test.csv  shapenet_train.csv
deepg3d/code/domains/: interval.cpp  interval.h
deepg3d/code/examples/: .gitignore
deepg3d/code/examples/modelnet40_64p_rotationz_theta_1_intervals_1/: config.txt
deepg3d/code/examples/modelnet40_64p_rotationz_theta_60_intervals_60/: config.txt
deepg3d/code/examples/modelnet40_64p_rotationzx_theta_10_intervals_10/: config.txt
deepg3d/code/examples/modelnet40_64p_rotationzyx_theta_5_intervals_5/: config.txt
deepg3d/code/examples/modelnet40_64p_shearing_theta_002_intervals_1/: config.txt
deepg3d/code/examples/modelnet40_64p_tapering_rotationz_theta_0.1_1_intervals_1/: config.txt
deepg3d/code/examples/modelnet40_64p_tapering_theta_01_intervals_1/: config.txt
deepg3d/code/transforms/: composition_3d.cpp  composition_3d.h  parser.cpp  parser.h  rotation_1d.cpp  rotation_1d.h  rotation_2d.cpp  rotation_2d.h  rotation_3d.cpp  rotation_3d.h  rotation_x.cpp  rotation_x.h  rotation_y.cpp  rotation_y.h  rotation_z.cpp  rotation_z.h  shear_x.cpp  shear_x.h  shear_y.cpp  shear_y.h  shear_z.cpp  shear_z.h  tapering_z.cpp  tapering_z.h  tapering_z_inverse.cpp  tapering_z_inverse.h  transformation_3d.h  twisting_z.cpp  twisting_z.h
deepg3d/code/utils/: polyhedra_optimizer.cpp  polyhedra_optimizer.h  utilities.cpp  utilities.h
(+47 files in other folders)
